# dados_acoes

./: pyproject.toml
app/: main.py
crawlers/: fundsexplorer_fii_crawler.ipynb
dados_acoes/: streamlit_app.py
